@@ -177,6 +177,21 @@ name|solr
 operator|.
 name|common
 operator|.
+name|SolrException
+operator|.
+name|ErrorCode
+import|;
+end_import
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|solr
+operator|.
+name|common
+operator|.
 name|params
 operator|.
 name|FacetParams
@@ -1103,7 +1118,7 @@ expr_stmt|;
 block|}
 catch|catch
 parameter_list|(
-name|Exception
+name|IOException
 name|e
 parameter_list|)
 block|{
@@ -1120,101 +1135,52 @@ argument_list|,
 name|e
 argument_list|)
 expr_stmt|;
-name|addException
+throw|throw
+operator|new
+name|SolrException
 argument_list|(
+name|ErrorCode
+operator|.
+name|SERVER_ERROR
+argument_list|,
+name|e
+argument_list|)
+throw|;
+block|}
+catch|catch
+parameter_list|(
+name|ParseException
+name|e
+parameter_list|)
+block|{
+name|SolrException
+operator|.
+name|logOnce
+argument_list|(
+name|SolrCore
+operator|.
+name|log
+argument_list|,
 literal|"Exception during facet counts"
 argument_list|,
 name|e
 argument_list|)
 expr_stmt|;
+throw|throw
+operator|new
+name|SolrException
+argument_list|(
+name|ErrorCode
+operator|.
+name|BAD_REQUEST
+argument_list|,
+name|e
+argument_list|)
+throw|;
 block|}
 return|return
 name|facetResponse
 return|;
-block|}
-DECL|method|addException
-specifier|public
-name|void
-name|addException
-parameter_list|(
-name|String
-name|msg
-parameter_list|,
-name|Exception
-name|e
-parameter_list|)
-block|{
-annotation|@
-name|SuppressWarnings
-argument_list|(
-literal|"unchecked"
-argument_list|)
-name|List
-argument_list|<
-name|String
-argument_list|>
-name|exceptions
-init|=
-operator|(
-name|List
-argument_list|<
-name|String
-argument_list|>
-operator|)
-name|facetResponse
-operator|.
-name|get
-argument_list|(
-literal|"exception"
-argument_list|)
-decl_stmt|;
-if|if
-condition|(
-name|exceptions
-operator|==
-literal|null
-condition|)
-block|{
-name|exceptions
-operator|=
-operator|new
-name|ArrayList
-argument_list|<
-name|String
-argument_list|>
-argument_list|()
-expr_stmt|;
-name|facetResponse
-operator|.
-name|add
-argument_list|(
-literal|"exception"
-argument_list|,
-name|exceptions
-argument_list|)
-expr_stmt|;
-block|}
-name|String
-name|entry
-init|=
-name|msg
-operator|+
-literal|'\n'
-operator|+
-name|SolrException
-operator|.
-name|toStr
-argument_list|(
-name|e
-argument_list|)
-decl_stmt|;
-name|exceptions
-operator|.
-name|add
-argument_list|(
-name|entry
-argument_list|)
-expr_stmt|;
 block|}
 comment|/**    * Returns a list of facet counts for each of the facet queries     * specified in the params    *    * @see FacetParams#FACET_QUERY    */
 DECL|method|getFacetQueryCounts
@@ -1279,8 +1245,6 @@ range|:
 name|facetQs
 control|)
 block|{
-try|try
-block|{
 name|parseParams
 argument_list|(
 name|FacetParams
@@ -1324,41 +1288,6 @@ name|base
 argument_list|)
 argument_list|)
 expr_stmt|;
-block|}
-catch|catch
-parameter_list|(
-name|Exception
-name|e
-parameter_list|)
-block|{
-name|String
-name|msg
-init|=
-literal|"Exception during facet.query of "
-operator|+
-name|q
-decl_stmt|;
-name|SolrException
-operator|.
-name|logOnce
-argument_list|(
-name|SolrCore
-operator|.
-name|log
-argument_list|,
-name|msg
-argument_list|,
-name|e
-argument_list|)
-expr_stmt|;
-name|addException
-argument_list|(
-name|msg
-argument_list|,
-name|e
-argument_list|)
-expr_stmt|;
-block|}
 block|}
 block|}
 return|return
@@ -1934,8 +1863,6 @@ range|:
 name|facetFs
 control|)
 block|{
-try|try
-block|{
 name|parseParams
 argument_list|(
 name|FacetParams
@@ -1997,41 +1924,6 @@ name|getTermCounts
 argument_list|(
 name|facetValue
 argument_list|)
-argument_list|)
-expr_stmt|;
-block|}
-block|}
-catch|catch
-parameter_list|(
-name|Exception
-name|e
-parameter_list|)
-block|{
-name|String
-name|msg
-init|=
-literal|"Exception during facet.field of "
-operator|+
-name|f
-decl_stmt|;
-name|SolrException
-operator|.
-name|logOnce
-argument_list|(
-name|SolrCore
-operator|.
-name|log
-argument_list|,
-name|msg
-argument_list|,
-name|e
-argument_list|)
-expr_stmt|;
-name|addException
-argument_list|(
-name|msg
-argument_list|,
-name|e
 argument_list|)
 expr_stmt|;
 block|}
@@ -4424,8 +4316,6 @@ range|:
 name|fields
 control|)
 block|{
-try|try
-block|{
 name|getFacetDateCounts
 argument_list|(
 name|f
@@ -4433,41 +4323,6 @@ argument_list|,
 name|resOuter
 argument_list|)
 expr_stmt|;
-block|}
-catch|catch
-parameter_list|(
-name|Exception
-name|e
-parameter_list|)
-block|{
-name|String
-name|msg
-init|=
-literal|"Exception during facet.date of "
-operator|+
-name|f
-decl_stmt|;
-name|SolrException
-operator|.
-name|logOnce
-argument_list|(
-name|SolrCore
-operator|.
-name|log
-argument_list|,
-name|msg
-argument_list|,
-name|e
-argument_list|)
-expr_stmt|;
-name|addException
-argument_list|(
-name|msg
-argument_list|,
-name|e
-argument_list|)
-expr_stmt|;
-block|}
 block|}
 return|return
 name|resOuter
@@ -5445,6 +5300,10 @@ name|Object
 argument_list|>
 name|getFacetRangeCounts
 parameter_list|()
+throws|throws
+name|IOException
+throws|,
+name|ParseException
 block|{
 specifier|final
 name|NamedList
@@ -5497,8 +5356,6 @@ range|:
 name|fields
 control|)
 block|{
-try|try
-block|{
 name|getFacetRangeCounts
 argument_list|(
 name|f
@@ -5506,41 +5363,6 @@ argument_list|,
 name|resOuter
 argument_list|)
 expr_stmt|;
-block|}
-catch|catch
-parameter_list|(
-name|Exception
-name|e
-parameter_list|)
-block|{
-name|String
-name|msg
-init|=
-literal|"Exception during facet.range of "
-operator|+
-name|f
-decl_stmt|;
-name|SolrException
-operator|.
-name|logOnce
-argument_list|(
-name|SolrCore
-operator|.
-name|log
-argument_list|,
-name|msg
-argument_list|,
-name|e
-argument_list|)
-expr_stmt|;
-name|addException
-argument_list|(
-name|msg
-argument_list|,
-name|e
-argument_list|)
-expr_stmt|;
-block|}
 block|}
 return|return
 name|resOuter
